# Hackathon-2-phase-1-todo-app

./: README.md  app.py  claude_config.json  pyproject.toml  requirements.txt  setup_with_uv.bat  setup_with_uv.sh  test_todo.py  todo-console.js  todo.py  todo_console.py
.specify/memory/: constitution.md
history/prompts/todo-app/: 1-phase-1-todo-app-implementation.spec.prompt.md  2-phase-1-todo-app-plan.plan.prompt.md  3-phase-1-todo-app-tasks.tasks.prompt.md  4-project-constitution.constitution.prompt.md
specs/todo-app/: plan.md  spec.md  tasks.md
static/: script.js  style.css
templates/: index.html
